Исправлен ci/cd

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -15,23 +15,25 @@ jobs:
     - name: Installing vcpkg (windows)
       run: |
         git clone https://github.com/Microsoft/vcpkg.git
+        echo 1
         cd vcpkg
-        git checkout --force 2020.01
+        echo 2
         ./bootstrap-vcpkg.bat
+        echo 3
         ./vcpkg.exe install cppzmq:x64-windows
+        echo 4
 
     - name: Running cmake (windows)
       run: |
-	cd ..
-	cd lab5_opengl
+        cd lab5_opengl
         mkdir build
         cd build
         cmake .. -DCMAKE_TOOLCHAIN_FILE=${{ github.workspace }}
-                  /../vcpkg/scripts/buildsystems/vcpkg.cmake
+                  /vcpkg/scripts/buildsystems/vcpkg.cmake
 
     - name: Build Solution (windows)
       run: |
-        cd ${{ github.workspace }}/lab5_opengl
+        cd lab5_opengl
         cmake --build build
 
   test:
